--- a/20211023140908-helm.html
+++ b/20211023140908-helm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Helm</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       b9376a33-534c-4468-a788-df96a642a8e2
 </p>
 
-<div id="outline-container-org5586886" class="outline-2">
-<h2 id="org5586886">What is Helm?</h2>
-<div class="outline-text-2" id="text-org5586886">
+<div id="outline-container-org5dae2be" class="outline-2">
+<h2 id="org5dae2be">What is Helm?</h2>
+<div class="outline-text-2" id="text-org5dae2be">
 <p>
 A tool that uses a package manager to create, install and manage applications
 inside a cluster.
@@ -268,9 +268,9 @@ inside a cluster.
 </div>
 </div>
 
-<div id="outline-container-org22f2be9" class="outline-2">
-<h2 id="org22f2be9">What is a Helm Chart?</h2>
-<div class="outline-text-2" id="text-org22f2be9">
+<div id="outline-container-org7b5c746" class="outline-2">
+<h2 id="org7b5c746">What is a Helm Chart?</h2>
+<div class="outline-text-2" id="text-org7b5c746">
 <p>
 A <code>Helm Chart</code> is a package containing files that will be used to deploy
 applications in the cluster. It consists of the following structure:
@@ -293,12 +293,12 @@ A directory consisting of:
 </div>
 </div>
 
-<div id="outline-container-orgcfcf437" class="outline-2">
-<h2 id="orgcfcf437">Commands</h2>
+<div id="outline-container-org003e981" class="outline-2">
+<h2 id="org003e981">Commands</h2>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
