--- a/20211103202637-kubernetes_configmaps.html
+++ b/20211103202637-kubernetes_configmaps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Kubernetes-ConfigMaps</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       c02e9bd0-e9fb-45d0-985a-4bdcbe62b8dc
 </p>
 
-<div id="outline-container-org29f8b9f" class="outline-2">
-<h2 id="org29f8b9f">ConfigMaps</h2>
-<div class="outline-text-2" id="text-org29f8b9f">
+<div id="outline-container-orga21c36a" class="outline-2">
+<h2 id="orga21c36a">ConfigMaps</h2>
+<div class="outline-text-2" id="text-orga21c36a">
 <p>
 A ConfigMap is a API object used to store non-confidential data in
 key-value pairs. Pods can consume ConfigMaps as environment variables,
@@ -291,9 +291,9 @@ data:
 </div>
 </div>
 
-<div id="outline-container-org0b9aad6" class="outline-3">
-<h3 id="org0b9aad6">Creating a ConfigMap</h3>
-<div class="outline-text-3" id="text-org0b9aad6">
+<div id="outline-container-orga67d487" class="outline-3">
+<h3 id="orga67d487">Creating a ConfigMap</h3>
+<div class="outline-text-3" id="text-orga67d487">
 <ul class="org-ul">
 <li>From files</li>
 </ul>
@@ -315,9 +315,9 @@ data:
 </div>
 
 
-<div id="outline-container-orgfbda4ec" class="outline-3">
-<h3 id="orgfbda4ec">Using ConfigMaps in Pods</h3>
-<div class="outline-text-3" id="text-orgfbda4ec">
+<div id="outline-container-org08761f9" class="outline-3">
+<h3 id="org08761f9">Using ConfigMaps in Pods</h3>
+<div class="outline-text-3" id="text-org08761f9">
 <div class="org-src-container">
 <pre class="src src-yaml">apiVersion: v1
 kind: Pod
@@ -364,7 +364,7 @@ spec:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
