--- a/20230411100120-managing_a_programming_project.html
+++ b/20230411100120-managing_a_programming_project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>managing-a-programming-project</title>
@@ -258,13 +258,13 @@ for the JavaScript code in this tag.
 :ID:       da4d5031-66cb-4d1c-b8cf-24d12adf5c17
 </p>
 
-<div id="outline-container-org664d599" class="outline-2">
-<h2 id="org664d599">Introduction</h2>
-<div class="outline-text-2" id="text-org664d599">
+<div id="outline-container-org848f367" class="outline-2">
+<h2 id="org848f367">Introduction</h2>
+<div class="outline-text-2" id="text-org848f367">
 </div>
-<div id="outline-container-org91ab4c8" class="outline-3">
-<h3 id="org91ab4c8">Your ground rules</h3>
-<div class="outline-text-3" id="text-org91ab4c8">
+<div id="outline-container-org1e7b1aa" class="outline-3">
+<h3 id="org1e7b1aa">Your ground rules</h3>
+<div class="outline-text-3" id="text-org1e7b1aa">
 <ul class="org-ul">
 <li>Adopt a set of unambiguous definitions and stick with them</li>
 <li>Define your project's <span class="underline">development cycle</span> and related all schedules and work
@@ -275,9 +275,9 @@ process to that cycle</li>
 </div>
 </div>
 
-<div id="outline-container-org6635ab7" class="outline-3">
-<h3 id="org6635ab7">Your contract</h3>
-<div class="outline-text-3" id="text-org6635ab7">
+<div id="outline-container-org231eb74" class="outline-3">
+<h3 id="org231eb74">Your contract</h3>
+<div class="outline-text-3" id="text-org231eb74">
 <blockquote>
 <p>
 Half the horror stories about programming involve either bad contracts or no
@@ -299,9 +299,9 @@ operating results and feel a sense of satisfaction.
 </blockquote>
 </div>
 
-<div id="outline-container-org950f2a9" class="outline-4">
-<h4 id="org950f2a9">Writing your own contract</h4>
-<div class="outline-text-4" id="text-org950f2a9">
+<div id="outline-container-orgee9bf15" class="outline-4">
+<h4 id="orgee9bf15">Writing your own contract</h4>
+<div class="outline-text-4" id="text-orgee9bf15">
 <ol class="org-ol">
 <li>Scope of work</li>
 <li>Schedule and deliverables</li>
@@ -317,9 +317,9 @@ operating results and feel a sense of satisfaction.
 </div>
 </div>
 
-<div id="outline-container-orgb3d2044" class="outline-3">
-<h3 id="orgb3d2044">The nature of the beast</h3>
-<div class="outline-text-3" id="text-orgb3d2044">
+<div id="outline-container-org35df633" class="outline-3">
+<h3 id="org35df633">The nature of the beast</h3>
+<div class="outline-text-3" id="text-org35df633">
 <p>
 "Why is software hard to build?"
 </p>
@@ -342,7 +342,7 @@ the needs of other systems.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
