--- a/20211029092528-dns.html
+++ b/20211029092528-dns.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>DNS</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       f5f06bf3-d288-47a8-901f-37bec1ba50e7
 </p>
 
-<div id="outline-container-orgf0527ff" class="outline-2">
-<h2 id="orgf0527ff">Why do we need DNS?</h2>
-<div class="outline-text-2" id="text-orgf0527ff">
+<div id="outline-container-org5d8f352" class="outline-2">
+<h2 id="org5d8f352">Why do we need DNS?</h2>
+<div class="outline-text-2" id="text-org5d8f352">
 <table>
 
 
@@ -290,13 +290,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org51b9029" class="outline-2">
-<h2 id="org51b9029">Terminology</h2>
-<div class="outline-text-2" id="text-org51b9029">
+<div id="outline-container-orge10a51f" class="outline-2">
+<h2 id="orge10a51f">Terminology</h2>
+<div class="outline-text-2" id="text-orge10a51f">
 </div>
-<div id="outline-container-org02d35e0" class="outline-3">
-<h3 id="org02d35e0">Labels</h3>
-<div class="outline-text-3" id="text-org02d35e0">
+<div id="outline-container-org0795979" class="outline-3">
+<h3 id="org0795979">Labels</h3>
+<div class="outline-text-3" id="text-org0795979">
 <table>
 
 
@@ -349,13 +349,13 @@ where TLD is an abbreviation for "Top Level Domain".
 </div>
 </div>
 
-<div id="outline-container-org6952a9d" class="outline-3">
-<h3 id="org6952a9d">Zones</h3>
+<div id="outline-container-orgcd75d77" class="outline-3">
+<h3 id="orgcd75d77">Zones</h3>
 </div>
 
-<div id="outline-container-org5f4a356" class="outline-3">
-<h3 id="org5f4a356">Query Types</h3>
-<div class="outline-text-3" id="text-org5f4a356">
+<div id="outline-container-org157d440" class="outline-3">
+<h3 id="org157d440">Query Types</h3>
+<div class="outline-text-3" id="text-org157d440">
 <ul class="org-ul">
 <li>Recursive</li>
 <li>Iterative</li>
@@ -365,7 +365,7 @@ where TLD is an abbreviation for "Top Level Domain".
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
