--- a/20211103110648-kubernetes_storage.html
+++ b/20211103110648-kubernetes_storage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Kubernetes-Storage</title>
@@ -258,13 +258,13 @@ for the JavaScript code in this tag.
 :ID:       1369d5e6-2858-4fc5-b59c-942326890b40
 </p>
 
-<div id="outline-container-orgf3761f7" class="outline-2">
-<h2 id="orgf3761f7">Volume Types</h2>
-<div class="outline-text-2" id="text-orgf3761f7">
+<div id="outline-container-orge668bac" class="outline-2">
+<h2 id="orge668bac">Volume Types</h2>
+<div class="outline-text-2" id="text-orge668bac">
 </div>
-<div id="outline-container-org4777667" class="outline-3">
-<h3 id="org4777667">emptyDir</h3>
-<div class="outline-text-3" id="text-org4777667">
+<div id="outline-container-org05e8522" class="outline-3">
+<h3 id="org05e8522">emptyDir</h3>
+<div class="outline-text-3" id="text-org05e8522">
 <p>
 Empty directory for storing data ephemeral data from the Pods
 </p>
@@ -298,36 +298,36 @@ spec:
 </div>
 </div>
 
-<div id="outline-container-orgb449282" class="outline-3">
-<h3 id="orgb449282">hostPath</h3>
-<div class="outline-text-3" id="text-orgb449282">
+<div id="outline-container-orgb169c51" class="outline-3">
+<h3 id="orgb169c51">hostPath</h3>
+<div class="outline-text-3" id="text-orgb169c51">
 <p>
 A volume that's mounted in the Node's filesystem and is shared with a Pod
 </p>
 </div>
 </div>
 
-<div id="outline-container-org0bf6799" class="outline-3">
-<h3 id="org0bf6799">nfs</h3>
-<div class="outline-text-3" id="text-org0bf6799">
+<div id="outline-container-org1ee737a" class="outline-3">
+<h3 id="org1ee737a">nfs</h3>
+<div class="outline-text-3" id="text-org1ee737a">
 <p>
 A NFS share mounted into the Pod
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgb5858fa" class="outline-3">
-<h3 id="orgb5858fa">configMap/secret</h3>
-<div class="outline-text-3" id="text-orgb5858fa">
+<div id="outline-container-orge45a3ac" class="outline-3">
+<h3 id="orge45a3ac">configMap/secret</h3>
+<div class="outline-text-3" id="text-orge45a3ac">
 <p>
 Provides access to resources
 </p>
 </div>
 </div>
 
-<div id="outline-container-org451feef" class="outline-3">
-<h3 id="org451feef">persistentVolumeClaim</h3>
-<div class="outline-text-3" id="text-org451feef">
+<div id="outline-container-org8e09cd0" class="outline-3">
+<h3 id="org8e09cd0">persistentVolumeClaim</h3>
+<div class="outline-text-3" id="text-org8e09cd0">
 <p>
 A <code>persistentVolume</code> is a cluster-wide storage resource that relies on
 network-attached storage. It's abstracted and associated to a Pod via a
@@ -381,9 +381,9 @@ spec:
 </div>
 
 
-<div id="outline-container-org81c81f8" class="outline-3">
-<h3 id="org81c81f8">Cloud</h3>
-<div class="outline-text-3" id="text-org81c81f8">
+<div id="outline-container-orgb404506" class="outline-3">
+<h3 id="orgb404506">Cloud</h3>
+<div class="outline-text-3" id="text-orgb404506">
 <p>
 Cluster-wide storage, which varies depending on the cloud provider
 </p>
@@ -408,7 +408,7 @@ Cluster-wide storage, which varies depending on the cloud provider
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
