--- a/20211104221056-history_of_logic.html
+++ b/20211104221056-history_of_logic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>History-of-Logic</title>
@@ -261,9 +261,9 @@ for the JavaScript code in this tag.
 Notes from the book "History of Logic: from Aristotle to Tarski".
 </p>
 
-<div id="outline-container-org2111c70" class="outline-2">
-<h2 id="org2111c70">Intro</h2>
-<div class="outline-text-2" id="text-org2111c70">
+<div id="outline-container-orgb9823ae" class="outline-2">
+<h2 id="orgb9823ae">Intro</h2>
+<div class="outline-text-2" id="text-orgb9823ae">
 <p>
 Roughly speaking, the development of logic in Europe has had three "golden
 ages":
@@ -280,9 +280,9 @@ ages":
 </ul>
 </div>
 
-<div id="outline-container-org21b216f" class="outline-3">
-<h3 id="org21b216f">The Greek period</h3>
-<div class="outline-text-3" id="text-org21b216f">
+<div id="outline-container-org7ff313e" class="outline-3">
+<h3 id="org7ff313e">The Greek period</h3>
+<div class="outline-text-3" id="text-org7ff313e">
 <p>
 From the beginning of the Greek golden period we get many anticipations of later
 developments. From Aristotle we get a wonderfully worked out system of
@@ -308,9 +308,9 @@ consequence of holding back logical progress.
 </div>
 </div>
 
-<div id="outline-container-org96e995e" class="outline-3">
-<h3 id="org96e995e">The medieval period</h3>
-<div class="outline-text-3" id="text-org96e995e">
+<div id="outline-container-org7a9542c" class="outline-3">
+<h3 id="org7a9542c">The medieval period</h3>
+<div class="outline-text-3" id="text-org7a9542c">
 <p>
 While learning in the West declined, the study of logic was kept alive in the 
 thriving Islamic world under the Abbasid Caliphate, reaching great heights of
@@ -351,9 +351,9 @@ Lisa Jardine 1982 : 805
 </div>
 </div>
 
-<div id="outline-container-org720d77b" class="outline-3">
-<h3 id="org720d77b">The birth of Calculus</h3>
-<div class="outline-text-3" id="text-org720d77b">
+<div id="outline-container-orgbb308aa" class="outline-3">
+<h3 id="orgbb308aa">The birth of Calculus</h3>
+<div class="outline-text-3" id="text-orgbb308aa">
 <p>
 While the study of pure logic may have declined in the early scientific period,
 there were a great many advances in mathematics, in particular in algebra and
@@ -397,9 +397,9 @@ envisaged.
 </div>
 </div>
 
-<div id="outline-container-org16f961d" class="outline-3">
-<h3 id="org16f961d">The modern era</h3>
-<div class="outline-text-3" id="text-org16f961d">
+<div id="outline-container-org658a4ef" class="outline-3">
+<h3 id="org658a4ef">The modern era</h3>
+<div class="outline-text-3" id="text-org658a4ef">
 <ul class="org-ul">
 <li>George Boole: Inspired by Aristotle and Leibniz, Boole managed to encode
 logical statements in a algebraic manner.</li>
@@ -463,7 +463,7 @@ Skolem’s work from the early 1920s, but this was not understood until later.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
