--- a/20211107141903-the_effective_manager.html
+++ b/20211107141903-the_effective_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The-Effective-Manager</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       32b2fe5a-3bc3-439b-a850-70a539498e9e
 </p>
 
-<div id="outline-container-orgeebc343" class="outline-2">
-<h2 id="orgeebc343">Teachable and Sustainable Skills</h2>
-<div class="outline-text-2" id="text-orgeebc343">
+<div id="outline-container-orgd6df5ac" class="outline-2">
+<h2 id="orgd6df5ac">Teachable and Sustainable Skills</h2>
+<div class="outline-text-2" id="text-orgd6df5ac">
 <blockquote>
 <p>
 However you manage, your techniques, behavior, and philosophy must be both
@@ -320,9 +320,9 @@ others. And the effective manager can repeat the
 </div>
 </div>
 
-<div id="outline-container-org8629a34" class="outline-2">
-<h2 id="org8629a34">Know Your People: One On Ones</h2>
-<div class="outline-text-2" id="text-org8629a34">
+<div id="outline-container-org769c1e8" class="outline-2">
+<h2 id="org769c1e8">Know Your People: One On Ones</h2>
+<div class="outline-text-2" id="text-org769c1e8">
 <p>
 One on ones are meetings that:
 </p>
@@ -337,9 +337,9 @@ One on ones are meetings that:
 </ol>
 </div>
 
-<div id="outline-container-org9c0eb4b" class="outline-3">
-<h3 id="org9c0eb4b">Scheduling</h3>
-<div class="outline-text-3" id="text-org9c0eb4b">
+<div id="outline-container-orgd97c4e5" class="outline-3">
+<h3 id="orgd97c4e5">Scheduling</h3>
+<div class="outline-text-3" id="text-orgd97c4e5">
 <blockquote>
 <p>
 Scheduling your O3s is actually more important than having them weekly. That's
@@ -378,9 +378,9 @@ manager: your time. Build an organization of effective managers
 </div>
 </div>
 
-<div id="outline-container-orgad1d9ed" class="outline-2">
-<h2 id="orgad1d9ed">Talk about performance - Feedback</h2>
-<div class="outline-text-2" id="text-orgad1d9ed">
+<div id="outline-container-org1cecb26" class="outline-2">
+<h2 id="org1cecb26">Talk about performance - Feedback</h2>
+<div class="outline-text-2" id="text-org1cecb26">
 <blockquote>
 <p>
 The second critical manager behavior that leads to results and retention is
@@ -406,9 +406,9 @@ Their defensiveness, then, should not be surprising.
 </blockquote>
 </div>
 
-<div id="outline-container-org7bc826a" class="outline-3">
-<h3 id="org7bc826a">Encourage Effective Future Behavior</h3>
-<div class="outline-text-3" id="text-org7bc826a">
+<div id="outline-container-orgd18a1b0" class="outline-3">
+<h3 id="orgd18a1b0">Encourage Effective Future Behavior</h3>
+<div class="outline-text-3" id="text-orgd18a1b0">
 <blockquote>
 <p>
 The moment you switch to a future focus, however, you free yourself up to focus
@@ -503,9 +503,9 @@ forgiven it. Remember that our focus is on the future, not the past</b>.
 </div>
 </div>
 
-<div id="outline-container-orgca396a1" class="outline-3">
-<h3 id="orgca396a1">When should I give feedback</h3>
-<div class="outline-text-3" id="text-orgca396a1">
+<div id="outline-container-orgd14ee7b" class="outline-3">
+<h3 id="orgd14ee7b">When should I give feedback</h3>
+<div class="outline-text-3" id="text-orgd14ee7b">
 <p>
 Feedbacks should be given as early and often as possible, if you can give
 feedback right after noticing positive/negative behaviour that's ideal, of
@@ -529,21 +529,21 @@ like attention.</li>
 </div>
 </div>
 
-<div id="outline-container-orge729b47" class="outline-2">
-<h2 id="orge729b47">Common Questions and Resistance to Feedback</h2>
-<div class="outline-text-2" id="text-orge729b47">
+<div id="outline-container-org41bc082" class="outline-2">
+<h2 id="org41bc082">Common Questions and Resistance to Feedback</h2>
+<div class="outline-text-2" id="text-org41bc082">
 <p>
 First, ask yourself these three questions before offering feedback.
 </p>
 </div>
 
-<div id="outline-container-orge133223" class="outline-3">
-<h3 id="orge133223">The questions</h3>
-<div class="outline-text-3" id="text-orge133223">
+<div id="outline-container-org06d05b5" class="outline-3">
+<h3 id="org06d05b5">The questions</h3>
+<div class="outline-text-3" id="text-org06d05b5">
 </div>
-<div id="outline-container-orge8d9d52" class="outline-4">
-<h4 id="orge8d9d52">Am I angry?</h4>
-<div class="outline-text-4" id="text-orge8d9d52">
+<div id="outline-container-org6315e5b" class="outline-4">
+<h4 id="org6315e5b">Am I angry?</h4>
+<div class="outline-text-4" id="text-org6315e5b">
 <blockquote>
 <p>
 If you're angry, don't give feedback. Period.
@@ -552,18 +552,18 @@ If you're angry, don't give feedback. Period.
 </div>
 </div>
 
-<div id="outline-container-org73feade" class="outline-4">
-<h4 id="org73feade">Do I want to remind or punish?</h4>
-<div class="outline-text-4" id="text-org73feade">
+<div id="outline-container-orgb50fc91" class="outline-4">
+<h4 id="orgb50fc91">Do I want to remind or punish?</h4>
+<div class="outline-text-4" id="text-orgb50fc91">
 <p>
 Always focus in encouraging effective future behavior.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org70c8d31" class="outline-4">
-<h4 id="org70c8d31">Can I let it go?</h4>
-<div class="outline-text-4" id="text-org70c8d31">
+<div id="outline-container-org51dd749" class="outline-4">
+<h4 id="org51dd749">Can I let it go?</h4>
+<div class="outline-text-4" id="text-org51dd749">
 <blockquote>
 <p>
 If you can't let it go in terms of how you feel, we recommend that you do let it
@@ -573,9 +573,9 @@ go by not giving negative feedback.
 </div>
 </div>
 
-<div id="outline-container-org5f6ef47" class="outline-4">
-<h4 id="org5f6ef47">Maybe delay or defer?</h4>
-<div class="outline-text-4" id="text-org5f6ef47">
+<div id="outline-container-org9318fac" class="outline-4">
+<h4 id="org9318fac">Maybe delay or defer?</h4>
+<div class="outline-text-4" id="text-org9318fac">
 <p>
 If you can't pass the three tests above, you should either <b>delay</b> or <b>defer</b>.
 </p>
@@ -590,9 +590,9 @@ again.</li>
 </div>
 </div>
 
-<div id="outline-container-org9426e89" class="outline-4">
-<h4 id="org9426e89">The Shot across the Bow</h4>
-<div class="outline-text-4" id="text-org9426e89">
+<div id="outline-container-org90182c7" class="outline-4">
+<h4 id="org90182c7">The Shot across the Bow</h4>
+<div class="outline-text-4" id="text-org90182c7">
 <p>
 What do I do if one of my directs pushes back or refuses feedback? If your
 direct is defensive it means they likely know they're in the wrong. Do not drag
@@ -609,9 +609,9 @@ apologize, and walk away. You've made your point.
 </div>
 </div>
 
-<div id="outline-container-org43a7181" class="outline-3">
-<h3 id="org43a7181">The capstone: systemic feedback</h3>
-<div class="outline-text-3" id="text-org43a7181">
+<div id="outline-container-orgab14ca7" class="outline-3">
+<h3 id="orgab14ca7">The capstone: systemic feedback</h3>
+<div class="outline-text-3" id="text-orgab14ca7">
 <blockquote>
 <p>
 Systemic feedback changes what you are talking to your direct about and raises
@@ -634,9 +634,9 @@ don't keep.
 </blockquote>
 </div>
 
-<div id="outline-container-org3827618" class="outline-4">
-<h4 id="org3827618">When to use it?</h4>
-<div class="outline-text-4" id="text-org3827618">
+<div id="outline-container-orgd63673f" class="outline-4">
+<h4 id="orgd63673f">When to use it?</h4>
+<div class="outline-text-4" id="text-orgd63673f">
 <blockquote>
 <p>
 You should use systemic feedback when you have already given six instances of
@@ -647,18 +647,18 @@ has not been engaging in the behavior they've committed to.
 </div>
 </div>
 
-<div id="outline-container-orgf88b4ab" class="outline-4">
-<h4 id="orgf88b4ab">How is it different?</h4>
-<div class="outline-text-4" id="text-orgf88b4ab">
+<div id="outline-container-org01abd0d" class="outline-4">
+<h4 id="org01abd0d">How is it different?</h4>
+<div class="outline-text-4" id="text-org01abd0d">
 <p>
 In systemic feedbacks you're giving feedback on <b>the failure to meet commitments</b>.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org3fbea64" class="outline-4">
-<h4 id="org3fbea64">Two dangers</h4>
-<div class="outline-text-4" id="text-org3fbea64">
+<div id="outline-container-org5c6cf35" class="outline-4">
+<h4 id="org5c6cf35">Two dangers</h4>
+<div class="outline-text-4" id="text-org5c6cf35">
 <ol class="org-ol">
 <li>Use the standard feedback model before applying the systemic feedback</li>
 <li>Implied sanctions must be delivered</li>
@@ -668,13 +668,13 @@ In systemic feedbacks you're giving feedback on <b>the failure to meet commitmen
 </div>
 </div>
 
-<div id="outline-container-orgba141e4" class="outline-2">
-<h2 id="orgba141e4">How to start giving feedback</h2>
-<div class="outline-text-2" id="text-orgba141e4">
+<div id="outline-container-org508f0d7" class="outline-2">
+<h2 id="org508f0d7">How to start giving feedback</h2>
+<div class="outline-text-2" id="text-org508f0d7">
 </div>
-<div id="outline-container-orgb52004f" class="outline-3">
-<h3 id="orgb52004f">Announce your intention in your weekly staff meeting</h3>
-<div class="outline-text-3" id="text-orgb52004f">
+<div id="outline-container-orgffc2993" class="outline-3">
+<h3 id="orgffc2993">Announce your intention in your weekly staff meeting</h3>
+<div class="outline-text-3" id="text-orgffc2993">
 <blockquote>
 <p>
 Cover the purpose of feedback talk to your directs about the purpose of giving
@@ -689,9 +689,9 @@ feedback model</li>
 </div>
 </div>
 
-<div id="outline-container-orge5237ca" class="outline-3">
-<h3 id="orge5237ca">Give only positive feedback for eigth weeks</h3>
-<div class="outline-text-3" id="text-orge5237ca">
+<div id="outline-container-org6f87fd2" class="outline-3">
+<h3 id="org6f87fd2">Give only positive feedback for eigth weeks</h3>
+<div class="outline-text-3" id="text-org6f87fd2">
 <blockquote>
 <p>
 Don't give any negative feedback as you're learning to use the feedback
@@ -708,9 +708,9 @@ hurt the feelings of your direct.
 </div>
 </div>
 
-<div id="outline-container-org03a8601" class="outline-3">
-<h3 id="org03a8601">Stay as positive as you can</h3>
-<div class="outline-text-3" id="text-org03a8601">
+<div id="outline-container-org19ceda2" class="outline-3">
+<h3 id="org19ceda2">Stay as positive as you can</h3>
+<div class="outline-text-3" id="text-org19ceda2">
 <ul class="org-ul">
 <li>Don't overdo negative feedbacks</li>
 <li>Positive feedbacks are much more powerful tools than negative ones</li>
@@ -727,9 +727,9 @@ all the good behaviors.
 </div>
 </div>
 
-<div id="outline-container-orgbde0859" class="outline-2">
-<h2 id="orgbde0859">Push work down - Delegation</h2>
-<div class="outline-text-2" id="text-orgbde0859">
+<div id="outline-container-org71ce2fd" class="outline-2">
+<h2 id="org71ce2fd">Push work down - Delegation</h2>
+<div class="outline-text-2" id="text-org71ce2fd">
 <blockquote>
 <p>
 Learning to delegate is part of the transition to becoming an executive. Too
@@ -744,9 +744,9 @@ How do we know when something is a task assignment and not a delegation?
 </p>
 </div>
 
-<div id="outline-container-org9d4d03b" class="outline-4">
-<h4 id="org9d4d03b">Task assignment x Task delegation</h4>
-<div class="outline-text-4" id="text-org9d4d03b">
+<div id="outline-container-org515371d" class="outline-4">
+<h4 id="org515371d">Task assignment x Task delegation</h4>
+<div class="outline-text-4" id="text-org515371d">
 <blockquote>
 <p>
 Delegation, on the other hand, is you turning over responsibility for one of
@@ -757,13 +757,13 @@ long standing basis, to one of your directs.
 </div>
 </div>
 
-<div id="outline-container-org0158356" class="outline-4">
-<h4 id="org0158356">Why Delegation Is the Solution - The Delegation</h4>
+<div id="outline-container-org9aa7f9d" class="outline-4">
+<h4 id="org9aa7f9d">Why Delegation Is the Solution - The Delegation</h4>
 </div>
 
-<div id="outline-container-orga6ce5cb" class="outline-4">
-<h4 id="orga6ce5cb">Delegate the Big Black Ball</h4>
-<div class="outline-text-4" id="text-orga6ce5cb">
+<div id="outline-container-org4cf89e2" class="outline-4">
+<h4 id="org4cf89e2">Delegate the Big Black Ball</h4>
+<div class="outline-text-4" id="text-org4cf89e2">
 <ul class="org-ul">
 <li>Not a good idea, since you <b>don't</b> know how to do it, how are you going to
 help your directs to do it?</li>
@@ -779,9 +779,9 @@ your directs. Learn it first, master it, before
 </div>
 </div>
 
-<div id="outline-container-orgf9fdac4" class="outline-4">
-<h4 id="orgf9fdac4">Delegate One of the Big Gray Balls</h4>
-<div class="outline-text-4" id="text-orgf9fdac4">
+<div id="outline-container-org9738c2d" class="outline-4">
+<h4 id="org9738c2d">Delegate One of the Big Gray Balls</h4>
+<div class="outline-text-4" id="text-org9738c2d">
 <blockquote>
 <p>
 One of your small balls is a big ball to your direct.
@@ -795,13 +795,13 @@ task anyway.</li>
 </div>
 </div>
 
-<div id="outline-container-orgf2145b6" class="outline-4">
-<h4 id="orgf2145b6">Delegate One or More of the Small Balls</h4>
+<div id="outline-container-orgf793bf0" class="outline-4">
+<h4 id="orgf793bf0">Delegate One or More of the Small Balls</h4>
 </div>
 
-<div id="outline-container-org92155f4" class="outline-3">
-<h3 id="org92155f4">How to Delegate—The Manager Tools Delegation Model</h3>
-<div class="outline-text-3" id="text-org92155f4">
+<div id="outline-container-org5034882" class="outline-3">
+<h3 id="org5034882">How to Delegate—The Manager Tools Delegation Model</h3>
+<div class="outline-text-3" id="text-org5034882">
 <ol class="org-ol">
 <li>State your desire for help</li>
 <li>Tell them why you're asking them</li>
@@ -814,7 +814,7 @@ task anyway.</li>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
