--- a/20211108165331-kubernetes_secrets.html
+++ b/20211108165331-kubernetes_secrets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Kubernetes-Secrets</title>
@@ -266,9 +266,9 @@ don't need to include confidential data in your application code.
 </p>
 </blockquote>
 
-<div id="outline-container-orgae92801" class="outline-2">
-<h2 id="orgae92801">YAML</h2>
-<div class="outline-text-2" id="text-orgae92801">
+<div id="outline-container-org660aa41" class="outline-2">
+<h2 id="org660aa41">YAML</h2>
+<div class="outline-text-2" id="text-org660aa41">
 <div class="org-src-container">
 <pre class="src src-yaml">apiVersion: v1
 kind: Secret
@@ -283,9 +283,9 @@ data:
 </div>
 </div>
 
-<div id="outline-container-org713ca0c" class="outline-2">
-<h2 id="org713ca0c">Accessing a secret</h2>
-<div class="outline-text-2" id="text-org713ca0c">
+<div id="outline-container-orgfdeb9d7" class="outline-2">
+<h2 id="orgfdeb9d7">Accessing a secret</h2>
+<div class="outline-text-2" id="text-orgfdeb9d7">
 <ul class="org-ul">
 <li>As an environment variable</li>
 </ul>
@@ -335,7 +335,7 @@ spec:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
