--- a/20211202213813-distributed_systems.html
+++ b/20211202213813-distributed_systems.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-10-07 Sat 21:43 -->
+<!-- 2023-10-10 Tue 11:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Distributed-Systems</title>
@@ -276,9 +276,9 @@ Properties of a reliable application
 <li>Versioning</li>
 </ul>
 
-<div id="outline-container-org30c4b78" class="outline-2">
-<h2 id="org30c4b78">Why Immutable Architecture</h2>
-<div class="outline-text-2" id="text-org30c4b78">
+<div id="outline-container-orgd3e4e98" class="outline-2">
+<h2 id="orgd3e4e98">Why Immutable Architecture</h2>
+<div class="outline-text-2" id="text-orgd3e4e98">
 <blockquote>
 <p>
 ..if you are in architecture, you are responsible for cutting the Gordian Knot
@@ -288,9 +288,9 @@ build the systems that run our society.
 </blockquote>
 </div>
 
-<div id="outline-container-org241c9c8" class="outline-3">
-<h3 id="org241c9c8">The Problems with Immutability</h3>
-<div class="outline-text-3" id="text-org241c9c8">
+<div id="outline-container-orga91e896" class="outline-3">
+<h3 id="orga91e896">The Problems with Immutability</h3>
+<div class="outline-text-3" id="text-orga91e896">
 <ul class="org-ul">
 <li>It's not how machines actually operate, i.e, we need find a way to represent
 fixed mutable memory</li>
@@ -299,9 +299,9 @@ fixed mutable memory</li>
 </div>
 </div>
 
-<div id="outline-container-org3edc3fb" class="outline-3">
-<h3 id="org3edc3fb">The Fallacies of Distributed Computing</h3>
-<div class="outline-text-3" id="text-org3edc3fb">
+<div id="outline-container-org178eeaf" class="outline-3">
+<h3 id="org178eeaf">The Fallacies of Distributed Computing</h3>
+<div class="outline-text-3" id="text-org178eeaf">
 <ol class="org-ol">
 <li>The network is reliable</li>
 <li>Latency is zero</li>
@@ -315,9 +315,9 @@ fixed mutable memory</li>
 </div>
 </div>
 
-<div id="outline-container-org0365d40" class="outline-3">
-<h3 id="org0365d40">Changing Assumptions</h3>
-<div class="outline-text-3" id="text-org0365d40">
+<div id="outline-container-orge0e21fe" class="outline-3">
+<h3 id="orge0e21fe">Changing Assumptions</h3>
+<div class="outline-text-3" id="text-orge0e21fe">
 <blockquote>
 <p>
 The tools that we use and the patterns that we follow today all evolved from a
@@ -330,9 +330,9 @@ programmers will make incorrect assumptions.
 </div>
 </div>
 
-<div id="outline-container-orgfceec38" class="outline-3">
-<h3 id="orgfceec38">Structural Sharing</h3>
-<div class="outline-text-3" id="text-orgfceec38">
+<div id="outline-container-org1b872e9" class="outline-3">
+<h3 id="org1b872e9">Structural Sharing</h3>
+<div class="outline-text-3" id="text-org1b872e9">
 <p>
 A common optimization for immutable data structures that is enabled by immutable
 data structures.
@@ -340,13 +340,13 @@ data structures.
 </div>
 </div>
 
-<div id="outline-container-orgf5e4bd4" class="outline-3">
-<h3 id="orgf5e4bd4">The Two Generals' Problem</h3>
+<div id="outline-container-org2157957" class="outline-3">
+<h3 id="org2157957">The Two Generals' Problem</h3>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2023-10-07 Sat 21:43.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2023-10-10 Tue 11:49.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
